[gd_scene load_steps=5 format=3 uid="uid://cl2fvixskm6ua"]

[ext_resource type="Texture2D" uid="uid://cypvttfh8kf4s" path="res://assets/ui/panel_beige.png" id="1_feeh6"]
[ext_resource type="LabelSettings" uid="uid://hlfdhwyivqj0" path="res://assets/lg_48_white.tres" id="2_twfks"]
[ext_resource type="Script" path="res://Scenes/level_button/level_button.gd" id="2_xh55t"]
[ext_resource type="LabelSettings" uid="uid://dgj8rg7xb4j5r" path="res://assets/lg_20_white.tres" id="4_44a1d"]

[node name="LevelButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture_normal = ExtResource("1_feeh6")
script = ExtResource("2_xh55t")

[node name="MC" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -45.0
offset_right = 117.0
offset_bottom = 45.0
grow_vertical = 2
scale = Vector2(0.8, 0.8)
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MC"]
layout_mode = 2

[node name="LevelNumberLbl" type="Label" parent="MC/VBoxContainer"]
layout_mode = 2
text = "3"
label_settings = ExtResource("2_twfks")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLbl" type="Label" parent="MC/VBoxContainer"]
layout_mode = 2
text = "BEST: 1000"
label_settings = ExtResource("4_44a1d")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
